# inst2vec-function-classifier

./: README.md  clastering.ipynb  clustering.ipynb  crawler.py  engineering.ipynb  extract_funcs.py  gen_dataset.py  requirements.txt
rust_extractor/: Cargo.toml
rust_extractor/src/: main.rs  test.rs
