[package]
name = "rust_extractor"
version = "0.1.0"
edition = "2018"

[dependencies]
syn = { version = "1.0.67", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.24", features = ["span-locations"] }
quote = "1.0.9"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
